if(CSV_ENABLE_CPP_CSV)
    add_executable(prettycsv prettycsv.cpp)
    target_compile_features(prettycsv PUBLIC cxx_std_17)
    set_target_properties(prettycsv PROPERTIES CXX_EXTENSIONS OFF)
    target_compile_options(prettycsv PRIVATE -Wall -Wextra)
    target_link_libraries(prettycsv PUBLIC csvpp)
endif()

if(CSV_ENABLE_C_CSV)
    add_executable(prettycsv_c prettycsv.c)
    target_compile_features(prettycsv_c PUBLIC c_std_11)
    set_target_properties(prettycsv_c PROPERTIES C_EXTENSIONS OFF)
    target_link_libraries(prettycsv_c PUBLIC csv)
endif()
