if(CSVPP_ENABLE_CPP OR CSVPP_ENABLE_C)
    add_library(parse_args OBJECT parse_args.c)
    target_compile_features(parse_args PUBLIC c_std_11)
endif()

if(CSVPP_ENABLE_CPP)
    add_executable(prettycsv prettycsv.cpp $<TARGET_OBJECTS:parse_args>)
    target_compile_features(prettycsv PUBLIC cxx_std_17)
    set_target_properties(prettycsv PROPERTIES CXX_EXTENSIONS OFF)
    target_compile_options(prettycsv PRIVATE -Wall -Wextra)
    target_link_libraries(prettycsv PUBLIC csvpp)
    INSTALL(TARGETS prettycsv RUNTIME DESTINATION bin)
endif()

if(CSVPP_ENABLE_C)
    add_executable(prettycsv_c prettycsv.c $<TARGET_OBJECTS:parse_args>)
    target_compile_features(prettycsv_c PUBLIC c_std_11)
    set_target_properties(prettycsv_c PROPERTIES C_EXTENSIONS OFF)
    target_link_libraries(prettycsv_c PUBLIC csv)
endif()
